vpc/qa_blue/vpc.tf
resource "aws_vpc" "vpc" {
    cidr_block = "192.168.16.0/20"
    enable_dns_support = true
    enable_dns_hostnames = true
    tags {
      Name = "${var.vpc_name}"
    }
}
